@@ -15,6 +15,7 @@ XXXX/XX/XX
   - #4217, Fix ST_Subdivide crash on EMPTY in intermediate iterations (Darafei
     Praliaskouski)
   - #4223, ST_DistanceTree error for near parallel boxes (Paul Ramsey)
+  - Schema qualify more functions for raster (Regina Obe)
 
 
 PostGIS 2.5.0
